[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "git_cmd_tool"
dynamic = ["version"]
description = "Gitコマンドでよく使う処理をまとめたPythonツール"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/city-bridge/git_cmd_tool"
Repository = "https://github.com/city-bridge/git_cmd_tool.git"
Issues = "https://github.com/city-bridge/git_cmd_tool/issues"

[tool.setuptools]
packages = ["git_cmd_tool"]

[tool.setuptools_scm]
write_to = "git_cmd_tool/_version.py"